--- a/app/Default Dashboard Theme.customCSS.css
+++ b/app/Default Dashboard Theme.customCSS.css
@@ -3903,6 +3903,14 @@ span.navigation-menu.settings-menu {
 }
 
 
+.field-value-module.inline.check.sortable.disabled {
+    font-size: 0;
+}
+.field-value-module.inline.check.sortable.disabled input{
+    display:none
+}
+
+
 [data-view="splitProjectDetail"]{
     @media screen and (max-width: 2000px) {
     
