--- a/app/fontAwesomeIcons.customCSS.css
+++ b/app/fontAwesomeIcons.customCSS.css
@@ -89,7 +89,7 @@
 }
 
 
-.inline-navigation-menu li.menu-user-configuration:before {
+.inline-navigation-menu li.menu-user-configuration>button:before {
     content: "\f013";
     font-family: FontAwesome;
     font-size: 20px;
