administrator -- Auto Commit - Changes made through Frontend Interface

--- a/app/gatherTheme.customCSS.css
+++ b/app/gatherTheme.customCSS.css
@@ -57,6 +57,11 @@ $leftPanelColor:#222222;
     display:none;
 }
 
+.pb-c [data-view="singleUserTeamCollectionIconsDetail"] .pro-tip-hint {
+    float: unset;
+    padding: 0;
+}
+
 
 
 button.primary-btn.nav-new-btn, .inline-navigation-menu li.menu-map-add.basemap button{
