administrator -- Auto Commit - Changes made through Frontend Interface

--- a/app/gatherTheme.customCSS.css
+++ b/app/gatherTheme.customCSS.css
@@ -391,7 +391,7 @@ button.primary-btn.nav-new-btn.view-selection:before {
 .inline-navigation-menu li.active {
     border-bottom: 4px solid $highlightBtnColor;
     button {
-        color: $highlightBtnColor;
+        color: darken($highlightBtnColor, 20%);
     }
 }
 
