--- a/app/Default Dashboard Theme.customCSS.css
+++ b/app/Default Dashboard Theme.customCSS.css
@@ -2574,12 +2574,11 @@ button.inline-btn.add:hover{
 }
 
 .ui-view.feed-sub-item, .ui-view.feed-sub-item:first-child {
-    border: 1px solid rgba(255, 255, 255, 0.5);
-    border-top: 1px solid rgba(255, 255, 255, 0.5);;
+    
     margin: 10px;
-    display: inline-table;
-    min-width: 500px;
+    display: block;
     border-radius: 2px;
+    border:none;
 }
 
 
