administrator -- Auto Commit - Changes made through Frontend Interface

--- a/app/Default Dashboard Theme.customCSS.css
+++ b/app/Default Dashboard Theme.customCSS.css
@@ -2581,6 +2581,10 @@ button.inline-btn.add:hover{
     border:none;
 }
 
+.feed-sub-item>*>*>div {
+    display: inline-block;
+}
+
 
 .ui-view.priority-high, .ui-view.priority {
     
