--- a/app/Default Dashboard Theme.customCSS.css
+++ b/app/Default Dashboard Theme.customCSS.css
@@ -2577,9 +2577,13 @@ button.inline-btn.add:hover{
     
     margin: 10px;
     display: block;
-    border-radius: 2px;
-    border:none;
+    border-radius: 5px;
+    border: none;
+    background-color: rgb(255 255 255 / 10%);
+    box-shadow: 0 0 5px black;
 }
+
+
 
 .feed-sub-item>*>*>div {
     display: inline-block;
