--- a/app/Default Dashboard Theme.customCSS.css
+++ b/app/Default Dashboard Theme.customCSS.css
@@ -16,6 +16,12 @@ button:focus {outline:0;}
     padding-left: 18px;
 }
 
+.ui-view.reply-box {
+    border-top: 4px solid #222222;
+    box-shadow: 13px -12px 10px black;
+    z-index: 1;
+    position: relative;
+}
 
 button.inline-edit, .btn.inline-edit, .btn.inline-remove{
    
