--- a/app/Default Dashboard Theme.customCSS.css
+++ b/app/Default Dashboard Theme.customCSS.css
@@ -3994,8 +3994,7 @@ span.navigation-menu.settings-menu {
 
 @media screen and (max-height: 1450px) {
     .navigation-menu ul{
-        
-        label, &.menu-links
+        label, &.menu-links{
             display:none;
         }
     }    
