--- a/app/Default Dashboard Theme.customCSS.css
+++ b/app/Default Dashboard Theme.customCSS.css
@@ -2470,6 +2470,36 @@ span.filter-btns {
     text-indent: 10px;
 }
 
+
+
+.ui-view.reply-box{
+    .discussion-textbox{
+        width: calc( 100% - 150px );
+        box-sizing: border-box;
+    }
+    
+    
+    
+    .media-bar.tabs-bottom {
+        float: right;
+        width: 125px;
+    }
+    
+    span.document.noIcon {
+        width: 70px;
+        height: 50px;
+        border-radius: 4px;
+        margin: 5px;
+        float: unset;
+        background-image: none;
+    }
+    
+    .upload-btns span.noIcon:after{
+        
+    }
+}
+
+
 button.t-btn {
     margin-left:0;
 }
