administrator -- Auto Commit - Changes made through Frontend Interface

--- a/app/Generated Style Script.customCSS.css
+++ b/app/Generated Style Script.customCSS.css
@@ -112,7 +112,7 @@ foreach(array("permit", "agreement", "letter", "document", "spatial", "other") a
 
 ?>
 
-.add-spatial .upload-btns span.document, .add-spatial .upload-btns span.layer.noIcon{
+.add-spatial .upload-btns .documen.file-browse-btnt, .add-spatial .upload-btns .layer.file-browse-btn{
     background-image: url("<?php echo UrlFrom($config->getParameter('spatial')[0])."?tint=".$config->getParameter("spatialTint","rgb(0,0,0)"); ?>");
 }
 span.flag{
