administrator -- Auto Commit - Changes made through Frontend Interface

--- a/app/Default Dashboard Theme.customCSS.css
+++ b/app/Default Dashboard Theme.customCSS.css
@@ -1977,8 +1977,8 @@ ul.item-tags li {
 
 
 .file-browse-btn {
-    background-color: mediumseagrean;
-    border-color: mediumseagrean;
+    background-color: mediumseagreen;
+    border-color: mediumseagreen;
     padding: 2px 5px;
     min-height: 30px;
     min-width: 30px;
