--- a/app/Default Dashboard Theme.customCSS.css
+++ b/app/Default Dashboard Theme.customCSS.css
@@ -18,7 +18,7 @@ button:focus {outline:0;}
 
 .ui-view.reply-box {
     border-top: 4px solid #222222;
-    box-shadow: 13px -12px 10px black;
+    box-shadow: 13px -12px 10px rgb(0 0 0 / 50%);
     z-index: 1;
     position: relative;
 }
