--- a/app/Default Dashboard Theme.customCSS.css
+++ b/app/Default Dashboard Theme.customCSS.css
@@ -17,7 +17,7 @@ button:focus {outline:0;}
 }
 
 .ui-view.reply-box {
-    border-top: 4px solid #222222;
+    border-top: 4px solid #2E303A;
     box-shadow: 13px -12px 10px rgb(0 0 0 / 50%);
     z-index: 1;
     position: relative;
