administrator -- Auto Commit - Changes made through Frontend Interface

--- a/app/gatherTheme.customCSS.css
+++ b/app/gatherTheme.customCSS.css
@@ -45,7 +45,7 @@ $leftPanelColor:#222222;
 
 
 .discussion-header{
-    border-bottom: 4px solid #5b4825;
+    border-bottom: 4px solid #2E303A;
     box-shadow: 13px 12px 10px rgb(0 0 0 / 50%);;
     z-index: 1;
     position: relative;
