--- a/app/Default Dashboard Theme.customCSS.css
+++ b/app/Default Dashboard Theme.customCSS.css
@@ -2476,6 +2476,17 @@ span.filter-btns {
     .discussion-textbox{
         width: calc( 100% - 150px );
         box-sizing: border-box;
+            
+        box-sizing: border-box;
+        background-color: #f0f0f0;
+        font-family: sans-serif;
+        font-size: 16px;
+        padding: 10px;
+        line-height: 24px;
+        text-indent: unset;
+        border: none;
+        box-shadow: 0 0 5px inset rgba(0,0,0,0.3);
+                
     }
     
     
