administrator -- Auto Commit - Changes made through Frontend Interface

--- a/app/Default Dashboard Theme.customCSS.css
+++ b/app/Default Dashboard Theme.customCSS.css
@@ -2529,6 +2529,7 @@ span.filter-btns {
         top: 0;
         font-size: 30px;
         color: white;
+        pointer-events: none;
     }
 }
 
