--- a/app/Default Dashboard Theme.customCSS.css
+++ b/app/Default Dashboard Theme.customCSS.css
@@ -4076,9 +4076,15 @@ span.navigation-menu.settings-menu {
 
 
 @media screen and (max-height: 1200px) {
-   .navigation-menu ul li {
-        padding: 7px 10px;
-        margin: 3px 0;
+   .navigation-menu ul{
+       
+        li{
+            padding: 7px 10px;
+            margin: 3px 0;
+        }
+        &.menu-links{
+            display:none;
+        }
     }
 }
 
