administrator -- Auto Commit - Changes made through Frontend Interface

--- a/app/Default Dashboard Theme.customCSS.css
+++ b/app/Default Dashboard Theme.customCSS.css
@@ -4091,18 +4091,18 @@ span.navigation-menu.settings-menu {
 
 @media screen and (max-height: 1000px){
 
-    
+    .left-panel{
 
-        .left-panel .user-detail .single_ImageContainer {
+        .user-detail .single_ImageContainer {
             transform: scale(0.6);
             margin: -15px; 
         }
 
-        .left-panel .user-detail .FormattedTextModule {
+        .FormattedTextModule {
             height: 135px;
         }
 
-       .left-panel button.primary-btn.nav-new-btn {
+        button.primary-btn.nav-new-btn {
             height: 40px;
             line-height: 22px;
         }
