--- a/app/Default Dashboard Theme.customCSS.css
+++ b/app/Default Dashboard Theme.customCSS.css
@@ -2484,7 +2484,7 @@ span.filter-btns {
     
     
     .discussion-textbox{
-        width: calc( 100% - 150px );
+        width: calc( 100% - 230px );
         box-sizing: border-box;
             
         box-sizing: border-box;
@@ -2503,17 +2503,29 @@ span.filter-btns {
     
     .media-bar.tabs-bottom {
         float: right;
-        width: 125px;
+        width: 210px;
     }
     
-    .document.file-browse-btn {
-        width: 70px;
-        height: 50px;
-        border-radius: 4px;
-        margin: 5px;
-        float: unset;
-        background-image: none;
+    .file-browse-btn {
+        &.document, &.send-btn{
+            width: 70px;
+            height: 50px;
+            border-radius: 4px;
+            margin: 5px;
+            float: unset;
+            background-image: none;
+        }
+        
+        &.send-btn {
+            background-color:#efa82c;
+            float:left;
+            border-color:#efa82c;
+        }
+        
     }
+    
+    
+   
     
     
     
