administrator -- Auto Commit - Changes made through Frontend Interface

--- a/app/Default Dashboard Theme.customCSS.css
+++ b/app/Default Dashboard Theme.customCSS.css
@@ -2545,7 +2545,7 @@ span.filter-btns {
     
     }
     .upload-btns .file-browse-btn.send-btn:after {
-        ontent: "\0f1d8";
+        content: "\0f1d8";
     }
 }
 
