--- a/app/Default Dashboard Theme.customCSS.css
+++ b/app/Default Dashboard Theme.customCSS.css
@@ -3822,9 +3822,10 @@ img.static-map {
 
             }
 
-            button{
+            ul button{
               text-align: center;
               width:70px;
+              font-size: 12px;
             }
 
             li:after{
