--- a/app/Default Dashboard Theme.customCSS.css
+++ b/app/Default Dashboard Theme.customCSS.css
@@ -2717,6 +2717,8 @@ button.inline-btn.add:hover{
     
     button.inline-btn{
     
+            opacity:0.5;
+            filter:grayscale(1);
         
             margin-right: 0;
             margin-left: 8px;
@@ -2732,6 +2734,16 @@ button.inline-btn.add:hover{
         &.edit {
         }
     }
+    
+    
+    
+   
+    &:hover button.inline-btn {
+        opacity:1;
+        filter:grayscale(0);
+    }
+    
+    
 }
 
 
