administrator -- Auto Commit - Changes made through Frontend Interface

--- a/app/Default Dashboard Theme.customCSS.css
+++ b/app/Default Dashboard Theme.customCSS.css
@@ -3431,6 +3431,12 @@ img.static-map {
         width: calc( 50% - 10px);
         height: 200px;
     }
+    
+    .ui-view.w-30.secondary-col{
+        width: calc( 100% - 10px);
+        height: 300px;
+    }
+    
     .ui-view.w-30.project-list, .ui-view.w-30-60{
         width: calc( 100% - 10px);
         height: 300px;
