--- a/app/Default Dashboard Theme.customCSS.css
+++ b/app/Default Dashboard Theme.customCSS.css
@@ -40,20 +40,20 @@ button:focus {outline:0;}
 
 
 
-.dark{
+.dark, .dark *{
     
-    *::-webkit-scrollbar {
+    &::-webkit-scrollbar {
       width: 0.7em;
       background-color: #222222;
       outline: 1px solid black;
       box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
     }
      
-    *::-webkit-scrollbar-track {
+    &::-webkit-scrollbar-track {
       box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
     }
      
-    *::-webkit-scrollbar-thumb {
+    &::-webkit-scrollbar-thumb {
       background-color: #b28029;
       border-radius:10px;
     }
