--- a/app/Generated Style Script.customCSS.css
+++ b/app/Generated Style Script.customCSS.css
@@ -100,8 +100,9 @@ foreach(array("permit", "agreement", "letter", "document", "spatial", "other") a
     }
     
     .file-list.<?php echo $type;?>s .file-container{
+        /*
         background-image: url("<?php echo UrlFrom($config->getParameter($type)[0]."?tint=".$config->getParameter($type."Tint","rgb(0,0,0)")); ?>");
-
+        */
     }
    
     <?php 
