administrator -- Auto Commit - Changes made through Frontend Interface

--- a/app/darkTheme.customCSS.css
+++ b/app/darkTheme.customCSS.css
@@ -108,7 +108,7 @@ $mainStyleColor:#efa82c;
     }
 
 
-    .label.top-left, .checkboxStyle {
+    .label.top-left, .checkbox-style {
         color: $fontColor;
     }
 
