administrator -- Auto Commit - Changes made through Frontend Interface

--- a/app/Default Dashboard Theme.customCSS.css
+++ b/app/Default Dashboard Theme.customCSS.css
@@ -2097,11 +2097,11 @@ ul.item-tags li {
     outline:none;
 }
 
-.checkboxStyle .lbl-txt {
+.checkbox-style .lbl-txt {
     margin-left: 5px;
 }
 
-.label.top-left, .checkboxStyle {
+.label.top-left, .checkbox-style {
     font-size: 13px;
     font-weight: 100;
     line-height: 24px;
