administrator -- Auto Commit - Changes made through Frontend Interface

--- a/app/Default Dashboard Theme.customCSS.css
+++ b/app/Default Dashboard Theme.customCSS.css
@@ -2159,7 +2159,7 @@ button.primary-btn, .WizardButton, .WizardTitle li, .t-btn {}
     }
 }
 
-.uitext-container.no-text, .boolean-field.checkboxStyle {
+.uitext-container.no-text, .boolean-field.checkbox-style {
     background: rgba(0,0,0,0.1);
     padding: 10px;
     box-sizing: border-box;
