administrator -- Auto Commit - Changes made through Frontend Interface

--- a/app/fontAwesomeIcons.customCSS.css
+++ b/app/fontAwesomeIcons.customCSS.css
@@ -240,7 +240,7 @@ button.download-link:before {content: "\f019";font-family: 'FontAwesome';}
 
 .document.no-thumb.ext-zip:after, .document.no-thumb.ext-kml:after, .document.no-thumb.ext-kmz:after {
 
-     content: "\0f15b";
+     content: "\0f0ac";
 
 }
 
