administrator -- Auto Commit - Changes made through Frontend Interface

--- a/app/Default Dashboard Theme.customCSS.css
+++ b/app/Default Dashboard Theme.customCSS.css
@@ -565,7 +565,7 @@ li.menu-project-discussion.withPosts:after {
 
 .WizardButton.btn.cancel {
     float: left;
-    background-color: crimson;
+    background-color: #a39587;
 }
 
 label.boolean-field p {
