--- a/app/gatherTheme.customCSS.css
+++ b/app/gatherTheme.customCSS.css
@@ -91,8 +91,11 @@ button.primary-btn.nav-new-btn, .inline-navigation-menu li.menu-map-add.basemap 
     border-radius: 100px;
     color: #2d2d2d;
     float: unset;
-    vertical-align: unset;
+    vertical-align: bottom;
     margin: 0;
+    font-size: 1em;
+    position: relative;
+    top: 2px;
 }
 
 
