administrator -- Auto Commit - Changes made through Frontend Interface

--- a/app/Default Dashboard Theme.customCSS.css
+++ b/app/Default Dashboard Theme.customCSS.css
@@ -38,6 +38,15 @@ button:focus {outline:0;}
     }
 }
 
+.section-title button {
+    border:none;
+}
+.section-title button:after {
+    content: "\0f148";
+    font-family: 'FontAwesome';
+    font-size: 30px;
+}
+
 
 
 .dark, .dark *{
