--- a/app/gct3Theme.customCSS.css
+++ b/app/gct3Theme.customCSS.css
@@ -547,7 +547,13 @@ a.pb-btn-close:after {
     font-size: 30px;
     font-weight: bold;
     color: #545454;
+    
+    
+    button {
+        color: #545454;
+    }
 }
+
 
 
 .section-title .thin {
