--- a/app/gatherTheme.customCSS.css
+++ b/app/gatherTheme.customCSS.css
@@ -134,6 +134,10 @@ button.form-btn.inline-edit.is-light {
 
 
 [data-view="leftPanel"] {
+    background-color: #e1e1e1;
+}
+
+.dark [data-view="leftPanel"] {
     background-color: $leftPanelColor;
 }
 
