administrator -- Auto Commit - Changes made through Frontend Interface

--- a/app/Default Dashboard Theme.customCSS.css
+++ b/app/Default Dashboard Theme.customCSS.css
@@ -47,7 +47,12 @@ button:focus {outline:0;}
     font-size: 30px;
 }
 
-
+.markdown button.inline-edit {
+    float: right;
+    margin-right: 18px;
+    position: relative;
+    top: -60px;
+}
 
 .dark, .dark *{
     
