--- a/app/gatherTheme.customCSS.css
+++ b/app/gatherTheme.customCSS.css
@@ -44,6 +44,15 @@ $leftPanelColor:#222222;
 }
 
 
+.content.markdown {
+    padding-left: 15px;
+     p {
+        padding-left: 25px;
+    }
+}
+
+
+
 .discussion-header{
     border-bottom: 4px solid #2E303A;
     box-shadow: 13px 12px 10px rgb(0 0 0 / 50%);;
