--- a/app/gct3Theme.customCSS.css
+++ b/app/gct3Theme.customCSS.css
@@ -1302,7 +1302,7 @@ button.download-link {
 }
 
 .dark .ui-list-view .ui-view.section-module, .dark .section-module, .dark .search-panel.ui-view {
-    background: #2e354c;
+    background: #3d414e;
     color:white;
 }
 
